[update] 优化评论区默认头像

--- a/app/components/ReplyItem/style.scss
+++ b/app/components/ReplyItem/style.scss
@@ -4,6 +4,7 @@
   overflow: hidden;
   .author {
     float: left;
+    max-width: 80px;
     .avatar {
       background: url('../../../static/images/default-avatar.svg') no-repeat;
       background-size: cover;
