--- a/app/components/ReplyItem/style.scss
+++ b/app/components/ReplyItem/style.scss
@@ -9,17 +9,40 @@
   margin: 20px auto;
   .author {
     float: left;
-    max-width: 80px;
+    // max-width: 80px;
+    width: 120px;
     .avatar {
       background: url('../../../static/images/default-avatar.svg') no-repeat;
       background-size: cover;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin: 10px auto 0;
       img {
         height: 80px;
         width: 80px;
       }
     }
+
+    .login-name {
+      text-align: center;
+    }
   }
-  .content {
+  .content-wrap {
     margin-left: 100px;
+    padding: 10px;
+    .floor {
+
+    }
+
+    .reply-time {
+      float: right;
+      // right: 10px;
+    }
+
+    .content {
+
+    }
   }
 }
